--- a/src/scss/modules/_form.scss
+++ b/src/scss/modules/_form.scss
@@ -1,6 +1,4 @@
 .form-small {
-  width: 504px;
-  height: 355px;
   border-radius: 21px;
   border: 2px solid #473fef;
   background: #fff;
@@ -23,9 +21,9 @@
   font-size: 18px;
   font-weight: 500;
   border-radius: 21px;
-  padding: 10px 185 10px 18px;
+  padding: 10px 180 10px 18px;
   background: #e5e4ff;
-  margin: 20px 0 0 20px;
+  margin: 23px 36 13px 36px;
 }
 
 .form-verb {
@@ -33,8 +31,9 @@
   border-radius: 50px;
   border: 2px solid var(--Bleu, #473fef);
   display: flex;
+  justify-content: space-between;
   width: 206px;
-  margin: 23px 17px 11px 20px;
+  margin: 13px 0 0px 0;
   padding: 8px 20px 8px 20px;
   align-items: center;
   color: #473fef;
@@ -46,4 +45,45 @@
   background: #4ce9cd;
 
   transition: 0.2s;
+}
+
+.form-verb-box {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 250px;
+  margin-left: 37px;
+}
+
+.switch-wrapper {
+  display: inline-block;
+  width: 50px;
+  height: 24px;
+  padding: 2px;
+  border-radius: 15px;
+  background: white;
+  border: 2px solid #473fef;
+  transition: ease-in 0.2s;
+}
+
+input:checked + .switch-wrapper {
+  background-color: #4ce9cd;
+  border: 2px solid #4ce9cd;
+}
+
+.switch-inner {
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  background: #473fef;
+  transition: ease-in 0.2s;
+}
+
+input:checked + .switch-wrapper .switch-inner {
+  margin-left: 26px;
+  background: #fff;
+}
+
+.switch input {
+  display: none;
 }
