--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
+  margin: 41px 25px 94px 0;
 }
 
 .nav-button {
