--- a/src/scss/modules/_sidebar.scss
+++ b/src/scss/modules/_sidebar.scss
@@ -26,3 +26,34 @@
   background-color: white;
   transition: 0.3s;
 }
+
+.sidebar-menu-content {
+  display: none;
+  position: absolute;
+  left: -210px;
+  top: 183px;
+  background-color: white;
+  border-radius: 15px 0px 0px 15px;
+  border-top: 2px solid #473fef;
+  border-bottom: 2px solid #473fef;
+  border-left: 2px solid #473fef;
+  background: #fff;
+  width: 208px;
+  height: 219px;
+  flex-shrink: 0;
+}
+
+.sidebar-menu:hover .sidebar-menu-content {
+  display: block;
+}
+
+.sidebar-menu-content a {
+  display: block;
+  text-decoration: none;
+  color: black;
+  padding: 5px 0;
+}
+
+.sidebar-menu-content a:hover {
+  background-color: #f0f0f0;
+}
