started to separate the modules

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,11 @@
+@import "base";
+@import "layout";
+@import "bootstrap/scss/bootstrap-grid";
+@import "modules/nav";
+@import "modules/form";
+@import "modules/footer";
+@import "modules/sidebar";
+@import "modules/switch";
 $grid-gutter-width: 58px;
 $container-max-widths: (
   sm: 540px,
@@ -6,11 +14,3 @@ $container-max-widths: (
   xl: 1140px,
   xxl: 1400px,
 );
-@import "base";
-@import "layout";
-@import "modules/example";
-@import "bootstrap/scss/bootstrap-grid";
-@import "modules/nav";
-@import "modules/form";
-@import "modules/footer";
-@import "modules/sidebar";
