--- a/src/scss/modules/_form.scss
+++ b/src/scss/modules/_form.scss
@@ -54,45 +54,12 @@
   margin-left: 37px;
 }
 
-.switch-wrapper {
-  display: inline-block;
-  width: 48px;
-  height: 21px;
-  padding: 2px;
-  border-radius: 15px;
-  background: white;
-  border: 2px solid #473fef;
-  transition: ease-in 0.2s;
-}
-
-input:checked + .switch-wrapper {
-  background-color: #4ce9cd;
-  border: 2px solid #4ce9cd;
-}
-
-.switch-inner {
-  width: 13px;
-  height: 13px;
-  border-radius: 8px;
-  background: #473fef;
-  transition: ease-in 0.1s;
-}
-
-input:checked + .switch-wrapper .switch-inner {
-  margin-left: 26px;
-  background: #fff;
-}
-
-.switch input {
-  display: none;
-}
-
-h3 {
+.form h3 {
   color: #473fef;
   font-size: 19px;
   font-weight: 600;
 }
-select {
+.form select {
   width: 83px;
   height: 42px;
   border-radius: 10px;
@@ -181,7 +148,7 @@ select {
   margin: 75px 0 15px 0;
 }
 
-hr {
+.form hr {
   stroke-width: 2px;
   color: #473fef;
 }
