transition form almos done

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "modules/footer";
 @import "modules/sidebar";
 @import "modules/switch";
+@import "modules/hiddenform";
 $grid-gutter-width: 58px;
 $container-max-widths: (
   sm: 540px,
