--- a/src/scss/modules/_hiddenform.scss
+++ b/src/scss/modules/_hiddenform.scss
@@ -3,7 +3,7 @@
   pointer-events: none;
   transition: opacity 0.1s;
   overflow: hidden;
-  transition: max-height 0.3s;
+  transition: max-height 0.5s;
 }
 
 .hiddenform-menu.is-active {
@@ -11,11 +11,16 @@
   pointer-events: auto;
 }
 
-.hiddenform-arrow {
+.hiddenform-burger img {
   margin-bottom: 20px;
   margin-left: 470px;
 }
 
-.hiddenform-arrow.is-active {
-  transition: rotate(180deg);
+.hiddenform-arrow {
+  transition: transform 0.5s ease;
+  margin-top: 10px;
+}
+
+.rotated {
+  transform: rotate(180deg);
 }
